--- a/src/components/Selection/GroupOrientation.css
+++ b/src/components/Selection/GroupOrientation.css
@@ -7,14 +7,18 @@
 
 .button_fontStyle {
   font-size: 2rem;
-  border: 0.5rem solid;
+  color: rgb(241, 246, 249);
+
+  /* border: 0.5rem solid;
   border-color: blueviolet;
-  border-radius: 2rem;
+  border-radius: 2rem; */
 
   width: 100%;
 }
 
 .buttonsGroup {
+  background-color: rgb(57, 72, 103);
+
   max-width: 20rem;
   min-width: 20rem;
   display: flex;
@@ -24,8 +28,8 @@
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   .button_Size {
-    max-width: 10rem;
-    min-width: 10rem;
+    max-width: 20rem;
+    min-width: 20rem;
     max-height: 4rem;
     min-height: 4rem;
   }
@@ -38,8 +42,8 @@
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
   .button_Size {
-    max-width: 12rem;
-    min-width: 12rem;
+    max-width: 20rem;
+    min-width: 20rem;
     max-height: 4rem;
     min-height: 4rem;
   }
@@ -51,12 +55,12 @@
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
   .button_Size {
-    max-width: 14rem;
-    min-width: 14rem;
+    max-width: 20rem;
+    min-width: 20rem;
     max-height: 4rem;
     min-height: 4rem;
   }
-  .button_fontStyle { 
+  .button_fontStyle {
     font-size: 1.5rem;
   }
 }
@@ -64,8 +68,8 @@
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
   .button_Size {
-    max-width: 15rem;
-    min-width: 15rem;
+    max-width: 20rem;
+    min-width: 20rem;
     max-height: 4rem;
     min-height: 4rem;
   }
@@ -77,8 +81,8 @@
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
   .button_Size {
-    max-width: 15rem;
-    min-width: 15rem;
+    max-width: 20rem;
+    min-width: 20rem;
     max-height: 4rem;
     min-height: 4rem;
   }
