--- a/src/components/Function/Function.module.css
+++ b/src/components/Function/Function.module.css
@@ -123,6 +123,29 @@
 /* ------------------------------------------3------------------------------------------- */
 
 @media screen and (max-width: 600px) {
+  .Function_Container {
+    /* overflow: hidden; */
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+  .Function_each {
+    width: 90%;
+
+    display: flex;
+    justify-content: center;
+    /* align-items: ; */
+    flex-direction: column;
+  }
+  .Function_each_reverse {
+    width: 90%;
+
+    display: flex;
+    justify-content: center;
+    /* align-items: ; */
+    flex-direction: column-reverse;
+  }
+
   .LEFT {
     width: 100%;
     border: 0.5rem solid;
@@ -130,12 +153,6 @@
   .RIGHT {
     width: 100%;
     border: 0.5rem solid;
-  }
-  .Function_Container {
-    /* overflow: hidden; */
-    width: 90%;
-    display: flex;
-    flex-direction: column;
   }
   /* .image {
     position: relative;
