--- a/src/components/Introduction/Introduction.module.css
+++ b/src/components/Introduction/Introduction.module.css
@@ -9,18 +9,28 @@
   flex-direction: column; /*added*/
   justify-content: center;
   align-items: center;
+
+  border: 0.5rem solid;
 }
 .article {
   max-height: 100%;
   max-width: 100%;
   position: relative;
-  overflow: hidden;
 }
 
 .image {
   object-fit: cover;
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+
+  display: flex;
+  /* flex-direction: ; */
+  justify-content: center;
+}
+
+.image > img {
+  max-width: 100%;
+  /* max-height: 5%; */
 }
 
 .testInsideImg {
@@ -32,20 +42,39 @@
   bottom: 0;
   left: 0;
   right: 0;
-  height: fit-content;
+  height: 60%;
+  /* width: fit-content; */
   margin: auto;
 
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
+
+  border: 0.5rem solid;
 }
 
-.testInsideImg > div {
-  width: 50%;
+.testInsideImg > div:not(.header) {
+  width: 80%;
   display: flex;
   flex-direction: row;
   justify-content: center;
+
+  /* border: 1.5rem solid; */
+}
+
+.header {
+  width: 70%;
+
+  display: flex;
+  justify-content: center;
+
+  font-weight: 700;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 5rem;
+  font-style: italic;
+
+  /* border: 0.5rem solid; */
 }
 
 .testInsideImg_prefix {
@@ -62,32 +91,28 @@
   display: flex;
   justify-content: center;
 
-  font-size: 2rem;
+  font-size: 3rem;
+  text-align: justify;
 }
 
 @media screen and (max-width: 600px) {
-  .image {
-    position: relative;
-    max-width: 100%;
-    max-height: 100%;
-    margin-top: -50%;
-    margin-left: -50%;
+  .image > img {
+    min-width: 150%;
+    /* max-height: 5%; */
   }
-
-  .testInsideImg > div {
+  .header {
+    font-size: 2.5rem;
+  }
+  .testInsideImg > div:not(.header) {
+    width: 90%;
+  }
+  .testInsideImg_suffix {
     width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+    font-size: 1.8rem;
   }
 }
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (max-width: 768px) and (min-width: 600px) {
-  .image {
-    position: relative;
-    max-width: 100%;
-    max-height: 100%;
-  }
   .testInsideImg > div {
     width: 50%;
     display: flex;
@@ -106,4 +131,8 @@
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
+  .image > img {
+    min-width: 150%;
+    /* max-height: 5%; */
+  }
 }
