--- a/src/components/VideoFrame.css
+++ b/src/components/VideoFrame.css
@@ -16,8 +16,10 @@
 .Introduction_Area {
   width: 100%;
   height: 100%;
-  /* display: block; */
+  /* display: flex;
+  justify-content: center; */
   margin: 2rem;
+  border: 0.5rem red solid;
 }
 .Function_Area {
   width: 100%;
@@ -198,6 +200,22 @@
   justify-content: center;
 }
 
+/* ======================================================================================================== */
+.how_to_achieve {
+  font-weight: 300;
+  font-family: fantasy;
+  font-size: 5rem;
+  font-style: italic;
+
+  /* width: 100%; */
+  margin-left: 2rem;
+  margin-top: 2rem;
+
+  display: inline-flex;
+
+  background-color: white;
+  border-bottom: 1rem solid;
+}
 /* ======================================================================================================== */
 @media screen and (max-width: 600px) {
   .videoFrame {
