--- a/src/components/Function/Function.module.css
+++ b/src/components/Function/Function.module.css
@@ -32,10 +32,13 @@
 .LEFT {
   width: 50%;
   border: 0.5rem solid;
+  border-right: 0;
 
   display: flex;
   justify-content: center;
   align-items: center;
+
+  background-color: rgba(189, 199, 219, 0.3);
 }
 .RIGHT {
   width: 50%;
@@ -154,6 +157,10 @@
     width: 100%;
     border: 0.5rem solid;
   }
+
+  .testInsideImg > div {
+    font-size: 1.6rem;
+  }
   /* .image {
     position: relative;
     max-width: 100%;
@@ -165,6 +172,41 @@
 }
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (max-width: 768px) and (min-width: 600px) {
+  .Function_Container {
+    /* overflow: hidden; */
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+  .Function_each {
+    width: 90%;
+
+    display: flex;
+    justify-content: center;
+    /* align-items: ; */
+    flex-direction: column;
+  }
+  .Function_each_reverse {
+    width: 90%;
+
+    display: flex;
+    justify-content: center;
+    /* align-items: ; */
+    flex-direction: column-reverse;
+  }
+
+  .LEFT {
+    width: 100%;
+    border: 0.5rem solid;
+  }
+  .RIGHT {
+    width: 100%;
+    border: 0.5rem solid;
+  }
+
+  .testInsideImg > div {
+    font-size: 2rem;
+  }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
