--- a/src/components/VideoFrame.css
+++ b/src/components/VideoFrame.css
@@ -19,7 +19,7 @@
   /* display: flex;
   justify-content: center; */
   margin: 2rem;
-  border: 0.5rem red solid;
+  /* border: 0.5rem red solid; */
 }
 .Function_Area {
   width: 100%;
@@ -29,7 +29,7 @@
   display: flex;
   justify-content: center;
 
-  border: 0.5rem red solid;
+  /* border: 0.5rem red solid; */
 }
 /* ======================================================================================================== */
 .whitePlane {
@@ -57,6 +57,21 @@
 
   width: 100%;
   height: 100%;
+
+  z-index: 1;
+}
+
+.btns-fixed {
+  position: fixed;
+  bottom: 0;
+
+  max-width: 100%;
+  display: flex;
+  justify-content: center;
+
+  border: 0.5rem solid;
+
+  z-index: 1;
 }
 /* ======================================================================================================== */
 
@@ -236,6 +251,7 @@
     z-index: 1;
     width: 20%;
   }
+
   .button-alignment {
     display: grid;
     grid-template-columns: auto auto;
