--- a/src/components/Function/Function.module.css
+++ b/src/components/Function/Function.module.css
@@ -205,12 +205,16 @@
   }
 
   .testInsideImg > div {
-    font-size: 2rem;
+    font-size: 1.8rem;
   }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (max-width: 992px) and (min-width: 768px) {
+
+  .testInsideImg > div {
+    font-size: 1.8rem;
+  }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
