--- a/src/components/VideoFrame.css
+++ b/src/components/VideoFrame.css
@@ -274,6 +274,10 @@
   .button-29 {
     margin-right: 1rem;
   }
+  .button-alignment {
+    display: grid;
+    grid-template-columns: auto auto;
+  }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
@@ -287,7 +291,7 @@
     width: 20%;
   }
   .button-29 {
-    margin: 0rem;
+    margin: 1rem;
   }
 }
 
@@ -320,9 +324,19 @@
   .videoContainer_tape {
     /* margin-left: 10rem; */
     /* top: 15%; */
+    width: 10%;
+    display: none;
     right: 10%;
     position: absolute;
     z-index: 1;
+    /* width: 20%; */
+  }
+  .videoContainer_tape img {
+    /* margin-left: 10rem; */
+    /* top: 15%; */
+    /* right: 10%; */
+    /* position: relative; */
+    /* z-index: 1; */
     /* width: 20%; */
   }
 }
